--- a/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
@@ -770,6 +770,7 @@ p.friend_progress_text {
   width: 93%;
   height:20px;
   background-color: #4ec67c;
+  opacity: .5;
   // margin-top: -50px;
 }
 
@@ -777,8 +778,7 @@ p.friend_progress_text {
   position: absolute;
   height:20px;
   // margin-top: -50px;
-  background-color: white;
-  opacity: .5;
+  background-color: #4ec67c;
 }
 
 p.feed_progress_text {
