Add image uploader to weigh in show page, preparing to create new uploader for carrier wave

--- a/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
@@ -588,6 +588,12 @@ h1.your-weigh-ins {
   left:82.5%;
 }
 
+.no-text-dec {
+  text-decoration: none;
+  &:hover{
+    text-decoration: none;
+  };
+}
 
 /* Friends page */
 
