--- a/weightable_practice_scaffolding/app/assets/stylesheets/weigh_ins.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/weigh_ins.css.scss
@@ -37,7 +37,7 @@
   font-weight: 600;
   color:#4ec67c;
   text-decoration: none;
-  font-size: 1.5em !important;
+  font-size: 1.4em !important;
   line-height: 1.2em;
 }
 
@@ -51,4 +51,8 @@
 
 .vert-center {
   line-height:35px;
+}
+
+.pad-top-20 {
+  padding-top:20px;
 }
