--- a/weightable_practice_scaffolding/app/views/weigh_ins/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/weigh_ins/show.html.erb
@@ -22,16 +22,18 @@
   </div>
 </div>
 <div class="row">
-  <div class="weigh-ins col-sm-10 col-md-8 center-element">
+  <div class="weigh-ins col-sm-10 col-md-8 center-element pad-top-20">
     <div class="row">
       <div class="col-xs-12">
-        <h3 class=""><%= @weigh_in.weight %> lbs</h3>
-        <p class="text-muted time">posted <%= time_ago_in_words(@weigh_in.created_at) %> ago</p>
+        <h3 class="inline-text"><%= @weigh_in.weight %> lbs</h3>
+        <p class="text-muted time inline-text">posted <%= time_ago_in_words(@weigh_in.created_at) %> ago</p>
+        
+          <%= render "form_set_weigh_in_pic" %>
         <h5><%= @weigh_in.status %></h5>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-6 col-xs-offset-1">
+      <div class="col-xs-12 col-md-6 col-md-offset-1">
         <%= link_to wi_yeehaw_path(:user_id=> "#{current_user.id}", :weigh_in_id=> "#{params[:id]}" ), :method=> :post do %>
           <div class="yeehaws-panel yeehaw-btn-pad">
             <div class="row ">
@@ -46,16 +48,18 @@
         <% end %>
       </div>
       <div class="col-xs-5 neg-margin">
-        <% if @wi_yeehaws.count>0 %>
+        <% if @wi_yeehaws.count==1 %>
           <div>
             <span><%= link_to "#{User.find(@wi_yeehaws.last.user_id).name}", user_path(@wi_yeehaws.last.user_id), :class=>"yh_text" %></span>
             <p class="yh_text">gave a YEEHAW!</p>
           </div>
-          <% if @wi_yeehaws.count>1%>
-           <span>and <%= @wi_yeehaws.count-1 %> other(s)</span>
-           <p class="yh_text">gave a YEEHAW!</p>
-          <% end %>
-        <% elsif @wi_yeehaws.count==0 && @user!=current_user%>
+        <% elsif @wi_yeehaws.count>1%>
+          <div>
+            <span><%= link_to "#{User.find(@wi_yeehaws.last.user_id).name}", user_path(@wi_yeehaws.last.user_id), :class=>"yh_text" %></span>
+           <span class="yh_text"><small>and <%= @wi_yeehaws.count-1 %> other(s)</small></span>
+            <p class="yh_text">gave a YEEHAW!</p>
+          </div>
+        <% elsif @wi_yeehaws.count==0%>
           <span class="yh_text"><small>click to leave a yeehaw!</small></span>
         <% end %>
       </div>
