--- a/weightable_practice_scaffolding/app/views/weigh_ins/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/weigh_ins/show.html.erb
@@ -17,18 +17,22 @@
             <h4 class="time"><%= @weigh_in.created_at.strftime("%I:%M%p") %></h4>
           </div>
         </div>
+          <%= render "form_set_weigh_in_pic" %>
       </div>
     </div>
   </div>
 </div>
-<div class="row">
+<div clasz="row">
   <div class="weigh-ins col-sm-10 col-md-8 center-element pad-top-20">
     <div class="row">
       <div class="col-xs-12">
         <h3 class="inline-text"><%= @weigh_in.weight %> lbs</h3>
         <p class="text-muted time inline-text">posted <%= time_ago_in_words(@weigh_in.created_at) %> ago</p>
-        
+        <% if @weigh_in.pic_url %>
+          <img class="pic-pad clearfix" src=<%= @weigh_in.pic_url %> />
+        <% else %>
           <%= render "form_set_weigh_in_pic" %>
+        <% end %>
         <h5><%= @weigh_in.status %></h5>
       </div>
     </div>
