--- a/weightable_practice_scaffolding/app/views/weigh_ins/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/weigh_ins/show.html.erb
@@ -17,7 +17,9 @@
             <h4 class="time"><%= @weigh_in.created_at.strftime("%I:%M%p") %></h4>
           </div>
         </div>
+        <% if current_user==@user %>
           <%= render "form_set_weigh_in_pic" %>
+        <% end %>
       </div>
     </div>
   </div>
